<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/bannerComparisonSettings"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@android:color/holo_purple"
            android:ems="10"
            android:inputType="text"
            android:text="Comparison Settings"
            android:textAlignment="center"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Salary"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Yearly Salary"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textYearlySalaryValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputYearlySalarySeekbar"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Bonus"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Yearly Bonus"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textYearlyBonusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputYearlyBonusSeekbar"
                android:layout_width="175sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Fund"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Training and Development Fund"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textTDFValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputTDFSeekbar"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_LeaveTime"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Leave Time"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textLeaveTimeValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputLeaveTimeSeekbar"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_Telework"
                android:layout_width="80dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Telework Days per Week"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textLeaveTeleworkDaysValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/inputTeleworkDaysSeekbar"
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="9"
                android:progress="1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="50dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/saveButton_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Save and Return To Menu" />

            <Button
                android:id="@+id/cancelButton_Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cancel and Exit To Menu" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>