...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Enter Job Offers" />

            <Button
                android:id="@+id/settingButton_menu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Comparison Setting" />

            <Button
...
